fixed the ovelapping Navbar, added new links to the navbar, adjusted the text alignment in the tiles

--- a/TrainingApproach.css
+++ b/TrainingApproach.css
@@ -4,6 +4,7 @@
     margin: auto;
     overflow: hidden;
     margin-top: 20px;
+   
 }
 
 .container ul {
@@ -21,6 +22,7 @@
     margin :20px 0px 20px 55px; 
     box-sizing: border-box;
     text-align: center;
+    border-radius: 16px;
    
 }
 .container ul li:hover {
@@ -36,18 +38,27 @@
     float:center;
     color:white;
     font-size: 20px;
-   
+    display: table;
+    
 }
-.text {
+
+/*style for training tiles*/
+.training_text {
+    line-height: 1.2;
+    text-align:center;
+    margin: 35px 5px 35px 20px;
+ 
+}
+/* .text {
     
     font-family:Arial, Helvetica, sans-serif;
     font-weight:normal;
     font-size: large;
     margin: auto;
-    padding:auto:
+    padding:auto;
     float:center;
     
-}
+} */
 
 @media screen and (max-width:1250px) {
     .container ul li{
