--- a/style_OK.css
+++ b/style_OK.css
@@ -1,10 +1,11 @@
 body {
     background-color: #d1d9e1;
+    
 }
 
 .navbar {
     background-color: #262262;
-}
+  }
 
 #logo {
     max-height: 70px;
@@ -88,8 +89,9 @@ p {
     margin: auto 0;
 }
 
-#about, #approach, #process, #clients {
+#about, #approach, #process, #clients, #training, #testimonials {
     color: #002060;
+    padding-top: 120px;
 }
 
 #process_text {
@@ -182,3 +184,111 @@ approach_img1 {
 .card-text {
     line-height: 45px;
 }
+
+/* css for card-flip testimonial */
+.justify-content-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 50px;
+  }
+  
+  #card__testimonial {
+    margin: 100px auto 0;
+    align-items: center;
+    margin-left: 5%;
+    margin-right: auto; 
+    width: 425px;
+    height: 550px;
+    perspective: 1000px;
+    background-color: #d1d9e1;
+    border:none;
+  }
+  
+  .card__inner {
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  .card__inner.is-flipped {
+    transform: rotateY(180deg);
+  }
+
+  .card__face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    border-radius: 16px;
+    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+  }
+  
+  .card__face--front {
+    background-image: linear-gradient(to bottom right, #002060,  #002060);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .card__face--back {
+    background-color: rgb(235, 230, 230);
+    border-radius: 16px;
+    transform: rotateY(180deg);
+  }
+  
+  .card__content {
+    width: 100%;
+    height: 100%;
+   }
+  
+  .card__header {
+    position: relative;
+    padding: 30px 30px 40px;
+  }
+  
+  .card__header:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: linear-gradient(to bottom left,  #262262  10%, #262262 115%); 
+    z-index: -1;
+    border-radius: 0px 0px 50% 0px;
+  }
+  
+  .pp {
+    display: block;
+    width: 128px;
+    height: 128px;
+    margin: 0 auto 30px;
+    border-radius: 50%;
+    border: 5px solid #FFF;
+    object-fit: cover;
+   
+  }
+  .text {
+    font-style: italic;
+    font-weight: normal;
+    color: #262262;
+  }
+  .card__body {
+    padding: 30px;
+  }
+  .card__body p {
+    font-size: 18px;
+    line-height: 1.4;
+  }
+
+  
+
